--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
   <title>Rememberer</title>
 </head>
 <body>
+  <button id="getSelection"> get Selection </button>
   MAIN
+  <script src="dist/main.js"></script>
 </body>
 </html>
