webpack config for pages and assets

--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -7,6 +7,6 @@
 <body>
   <button id="getSelection"> get Selection </button>
   MAIN
-  <script src="../../dist/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
